--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-div"> 
+        <div class="container header-div"> 
         <a href=""><img src="./img/logointerno.png" alt=""></a>
         <nav class="nav">
             <ul class="nav-list">
@@ -45,6 +45,7 @@
             </div>
         </section>
         <section class="section-interno">
+            <div class="container">
             <ul class="interno-list">
                 <li>
                     <h2 class="box-text">Interior Design</h2>
@@ -62,8 +63,10 @@
                     <button type="button" class="button-box">View More <img src="./img/imageright.png" alt="" ></button>
                 </li>
             </ul>
+        </div>
         </section>
         <section class="section-mode">
+            <div class="container flexing">
             <ul class="mode-list">
                 <li><h2 class="mode-text">We Tackle The Most Challenging Designs</h2></li>
                 <li><p class="text-mode-describrion">The world needs innovators and problem solvers who turn challenges into greater opportunities. We have</p></li>
@@ -77,9 +80,13 @@
                 </li>
                 <li><button type="button" class="button-free">Get Free Estimate</button></li>
             </ul>
+        <div>
+            <img src="./img/kitchening.png" alt="">
+        </div>
+        </div>
         </section>
         <section class="section-people">
-            <div class="conteiner">
+            <div class="container wraping">
             <h2 class="people-head">What the People Thinks</h2>
             <p class="head-about">About Interno</p>
             <ul class="people-list">
@@ -124,6 +131,156 @@
                 <li><img src="./img/naturehome.png" alt="" class="nature"></li>
                 <li><img src="./img/classicdesign.png" alt="" class="classic"></li>
             </ul>
+        </section>
+        <section class="section-project">
+            <h2 class="project-text">Recent Projects</h2>
+            <p class="project-caption">With tools to make every part of your process more human and a support team</p>
+            <p class="text-project">excited to help you, getting started with us never been easier.</p>
+        </section>
+        <section class="section-model">
+            <div class="container">
+            <ul class="section-art">
+                <li>
+                    <img src="./img/winery.png" alt="">
+                    <div class="box-wrap">
+                    <div>
+                    <p class="list-variant">Winery Dry Creek Building</p>
+                    <p class="list-art">Art Modern</p>
+                    </div>
+                    <button type="button" class="button-art"><img src="./img/next.png" alt=""></button>
+                    </div>
+                </li>
+                <li>
+                    <img src="./img/creative.png" alt="">
+                    <div class="box-wrap">
+                    <div>
+                    <p class="list-variant">Creative Workplace Design</p>
+                    <p class="list-art">Minimalist</p>
+                    </div>
+                    <button type="button" class="button-art"><img src="./img/next.png" alt=""></button>
+                    </div>
+                </li>
+            </ul>
+            <ul class="section-arting">
+                <li>
+                    <img src="./img/bedrooming.png" alt="">
+                    <div class="box-wrap">
+                    <div>
+                    <p class="list-variant">Bedroom Interior Pot Work</p>
+                    <p class="list-art">Modern</p>
+                    </div>
+                    <button type="button" class="button-art"><img src="./img/next.png" alt=""></button>
+                    </div>
+                </li>
+                <li>
+                    <img src="./img/ambience.png" alt="">
+                    <div class="box-wrap">
+                    <div>
+                    <p class="list-variant">Light Ambience Sepia Design</p>
+                    <p class="list-art">Scandinavian</p>
+                    </div>
+                    <button type="button" class="button-art"><img src="./img/next.png" alt=""></button>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        </section>
+        <section class="section-number">
+            <div class="container">
+                <ul class="list-number">
+                    <li class="number-li">
+                        <p class="number-cost">12</p>
+                        <p class="number-name">Years Of Experiance</p>
+                    </li>
+                    <li class="number-li">
+                        <p class="number-cost">5K</p>
+                        <p class="number-name">Success Project</p>
+                    </li>
+                    <li class="number-li">
+                        <p class="number-cost">1K</p>
+                        <p class="number-name">Active Project</p>
+                    </li>
+                    <li class="number-li">
+                        <p class="number-cost">4K</p>
+                        <p class="number-name">Happy Customers</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section-blogs">
+            <div class="container">
+                <h2 class="text-blogs">Recent Blogs</h2>
+                <p class="trends-text">Get updates about our latest trends and techniques used in</p>
+                <p class="text-design">interior design project works.</p>
+            </div>
+        </section>
+        <section class="section-kitchen">
+            <div class="container">
+            <ul class="list">
+                <li class="list-card">
+                    <img src="./img/yorkkitch.jpg" alt="">
+                    <h2 class="head-interier">Residential Interior Designer In New York, USA</h2>
+                    <div class="wrap-number">
+                    <p class="number-months">November 23, 2021</p>
+                    <button type="button" class="button-continue"><img src="./img/govno.png" alt=""></button>
+                    </div>
+                </li>
+                <li class="list-card">
+                    <img src="./img/bestwall.png" alt="">
+                    <h2 class="head-interier">How To Choose The Best Wall Art & Decor House?</h2>
+                    <div class="wrap-number">
+                    <p class="number-months">November 23, 2021</p>
+                    <button type="button" class="button-continue"><img src="./img/govno.png" alt=""></button>
+                    </div>
+                </li>
+                <li class="list-card">
+                    <img src="./img/whitekitchen.png" alt="">
+                    <h2 class="head-interier">Tips To Increase The Interior Value Of Your House</h2>
+                    <div class="wrap-number">
+                    <p class="number-months">November 23, 2021</p>
+                    <button type="button" class="button-continue"><img src="./img/govno.png" alt=""></button>
+                    </div>
+                </li>
+                <li class="list-card list-top">
+                    <img src="./img/office.png" alt="">
+                    <h2 class="head-interier">Best Solution For Any Office & Business Interior</h2>
+                    <div class="wrap-number">
+                    <p class="number-months">November 23, 2021</p>
+                    <button type="button" class="button-continue"><img src="./img/govno.png" alt=""></button>
+                    </div>
+                </li>
+                <li class="list-card list-top">
+                    <img src="./img/work.png" alt="">
+                    <h2 class="head-interier">Get Solution For Building Construction Work</h2>
+                    <div class="wrap-number">
+                    <p class="number-months">November 23, 2021</p>
+                    <button type="button" class="button-continue"><img src="./img/govno.png" alt=""></button>
+                    </div>
+                </li>
+                <li class="list-card list-top">
+                    <img src="./img/cabinets.png" alt="">
+                    <h2 class="head-interier">Attain The Best Finish For The Kitchen Cabinets</h2>
+                    <div class="wrap-number">
+                    <p class="number-months">November 23, 2021</p>
+                    <button type="button" class="button-continue"><img src="./img/govno.png" alt=""></button>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        </section>
+        <section class="section-interno">
+            <div class="container">
+                <div class="wraping-info">
+                    <h2 class="text-info">Wanna join the interno?</h2>
+                    <p class="text-contactecst">Contact Us & Get a Free Consultation</p>
+                    <button type="button" class="button-connect">Connect With us</button>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div>
+                
+            </div>
         </section>
     </main>
 </body>
