--- a/index.html
+++ b/index.html
@@ -277,11 +277,70 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div>
-                
+    </main>
+        <section class="footer">
+            <div class="container footer-contact">
+                <div>
+                <ul>
+                    <li><img src="./img/internohome.png" alt=""></li>
+                    <li><p class="text-footer">We are the leading architect and interior design firm in the world.</p></li>
+                    <li class="footer-img">
+                        <img src="./img/f.png" alt="">
+                        <img src="./img/t.png" alt="">
+                        <img src="./img/in.png" alt="">
+                        <img src="./img/stagram.png" alt="">
+                    </li>
+                </ul>
+                </div>
+                <div>
+                <ul class="list-pages">
+                    <li class="item">
+                        <h2 class="pages">Pages</h2>
+                        <div class="wrap-footer">
+                        <p class="link">Style Guide</p>
+                        <p class="link">Protected</p>
+                        <p class="link">Licenses</p>
+                        <p class="link">Changelog</p>
+                        <p class="link">404</p>
+                        </div>
+                    </li>
+                    <li class="item-list">
+                        <h2 class="pages">Explore</h2>
+                        <div class="wrap-footer">
+                        <p class="link">About Us</p>
+                        <p class="link">Recent Blog</p>
+                        <p class="link">Pricing Plan</p>
+                        <p class="link">Our Projects</p>
+                        <p class="link">Contact Us</p>  
+                        </div>
+                    </li>
+                    <li class="list-last">
+                        <h2 class="pages">Contact</h2>
+                        <div class="wrap-footer">
+                        <p class="link">53, East Birchwood Ave. <br> Brooklyn, New York 11201, USA.</p>
+                        <p class="link">contact@interno.com</p>
+                        <p class="link">(123) 456 - 7890</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
             </div>
         </section>
-    </main>
+        <section class="section-last">
+            <ul class="list-copy">
+                <li>
+                    <p class="p">Copyright © Interno | Designed by</p>
+                </li>
+                <li>
+                    <p class="b">Victorflow</p>
+                </li>
+                <li>
+                    <p class="p">Templates - Powered by</p>
+                </li>
+                <li>
+                    <p class="b">Webflow</p>
+                </li>
+            </ul>
+        </section>
 </body>
 </html>
